...
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/default_emoji_5"
            android:textSize="18dp" />

        <ImageView
            android:id="@+id/conv_action_more"
            android:layout_width="36dp"
            android:layout_height="36dp"
...
            android:contentDescription="@string/tv_action_more"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/baseline_add_24" />

        <ImageView
            android:id="@+id/conv_action_reply"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/menu_message_reply"
            android:focusable="true"
...
            android:text="@string/share_label"
            android:textColor="@color/text_color"
            app:drawableStartCompat="@drawable/baseline_share_twoton_16dp"
            app:drawableTint="@color/colorPrimary" />

        <TextView
            android:id="@+id/conv_action_edit"
            style="@style/TextAppearance.Material3.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
...
