...
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            tools:listitem="@layout/item_number_selected" />

                        <EditText
                            android:id="@+id/msg_input_txt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/write_a_message"
                            android:imeOptions="actionSend|flagNoExtractUi"
                            android:importantForAutofill="no"
                            android:inputType="textShortMessage|textImeMultiLine|text|textMultiLine|textCapSentences"
                            android:maxLines="5"
                            android:padding="8dp" />

                        <TextView
                            android:id="@+id/emoji_send"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackgroundBorderless"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
                            android:textSize="18sp"
                            tools:text="@string/conversation_default_emoji" />

                        <ImageButton
                            android:id="@+id/msg_send"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:background="?selectableItemBackgroundBorderless"
                            android:contentDescription="@string/send_message"
                            android:paddingHorizontal="12dp"
                            android:paddingVertical="8dp"
...
