...
    <string name="clear_history_dialog_title">Clear history?</string>
    <string name="clear_history_dialog_message">This action cannot be undone.</string>
    <string name="clear_history_completed">History has been cleared.</string>
    <string name="clear_history">Clear</string>

    <!-- Conversation -->
    <string name="conversation_details">Conversation details</string>
    <string name="contact_details">Contact details</string>
    <string name="conversation_action_delete_this">Delete this conversation</string>
    <string name="conversation_action_delete_this_title">Delete this conversation?</string>
    <string name="leave_conversation">Leave conversation</string>
    <string name="conversation_action_delete_this_message">This action cannot be undone.</string>
    <string name="conversation_action_history_clear">Clear history</string>
...
    <string name="block_contact_dialog_message">%1$s won\'t be able to contact you until you unblock it.</string>
    <string name="block_contact_completed">%1$s was blocked.</string>
    <string name="unblock_contact_dialog_title">Unblock %1$s?</string>
    <string name="unblock_contact_dialog_message">%1$s will be able to contact you again.</string>
    <string name="unblock_contact_completed">%1$s was unblocked.</string>
    <string name="conversation_contact_is_typing">Contact is typing…</string>
    <string name="conversation_info_contact_you">You</string>
    <string name="conversation_members">Members</string>
    <string name="conversation_syncing">Downloading conversation from peer</string>
    <string name="conversation_blocked">This contact is blocked.</string>
    <string name="conversation_ended">Conversation ended.</string>
    <string name="conversation_message_deleted">%s deleted a message</string>
    <string name="conversation_reply_you">You</string>
    <string name="video_not_found">Video file not found</string>

    <string name="conversation_preference_color">Conversation color</string>
    <string name="conversation_preference_emoji">Conversation emoji</string>
    <string name="conversation_type_contact">Jami contact</string>
...
